docs(wordpress): add wordpress nfs volume readme

--- a/wordpress/wordpress-nfs-volume/wordpress.yaml
+++ b/wordpress/wordpress-nfs-volume/wordpress.yaml
@@ -72,7 +72,8 @@ metadata:
     app: wordpress
 spec:
   type: LoadBalancer
-  loadBalancerIP: 35.229.243.229
+  # Reserve a static external IP address
+  # loadBalancerIP: 35.229.243.229
   ports:
     - port: 80
       targetPort: 80
