--- a/wordpress/wordpress-nfs-volume/mysql.yaml
+++ b/wordpress/wordpress-nfs-volume/mysql.yaml
@@ -1,12 +1,26 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Service
 metadata:
-  name: mysql-volumeclaim
+  name: mysql
   labels:
     app: mysql
 spec:
+  type: LoadBalancer
+  ports:
+    - port: 3306
+      targetPort: 3306
+      protocol: TCP
+  selector:
+    role: mysql
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+spec:
   accessModes:
     - ReadWriteOnce
+  storageClassName: ""
   resources:
     requests:
       storage: 88Gi
@@ -22,7 +36,6 @@ spec:
     role: mysql
   template:
     metadata:
-  
       labels:
         role: mysql
     spec:
@@ -44,19 +57,4 @@ spec:
       volumes:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
-            claimName: mysql-volumeclaim
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mysql
-  labels:
-    app: mysql
-spec:
-  type: LoadBalancer
-  ports:
-    - port: 3306
-      targetPort: 3306
-      protocol: TCP
-  selector:
-    role: mysql
+            claimName: mysql-pv-claim
